# zeronetics

./: .clang-format  .gitignore  .gitmodules  3d-grid_8h_source.html  CMakeLists.txt  Doxyfile  README.md  aabb_8h_source.html  annotated.html  annotated_dup.js  arch-render-manager.html  arch.html  asset-manager_8h_source.html  asset-types_8h_source.html  assets_8h_source.html  attributes_8h_source.html  base-input-manager_8h_source.html  basic_8h_source.html  bindable_8h_source.html  bindable_8hpp_source.html  build-clion.html  build-info.html  build_8h_source.html  callbacks.html  camera-3d.html  camera-3d_8h_source.html  cameras_8h_source.html  classENGINE__NAMESPACE_1_1EngineInfo-members.html  classENGINE__NAMESPACE_1_1EngineInfo.html  classENGINE__NAMESPACE_1_1GlfwWindow.html  classENGINE__NAMESPACE_1_1GlfwWindow__coll__graph.dot  classENGINE__NAMESPACE_1_1IRenderer.html  classENGINE__NAMESPACE_1_1IWindow.html  classENGINE__NAMESPACE_1_1IWindow__inherit__graph.dot  classZEN_1_1AABB3D-members.html  classZEN_1_1AABB3D.html  classZEN_1_1AABB3D.js  classZEN_1_1Assets_1_1AssetManager.html  classZEN_1_1Assets_1_1AssetManager__coll__graph.dot  classZEN_1_1Assets_1_1Texture2D-members.html  (+813 more)
.github/workflows/: doxygen.yml
cmake/: autoload-generator.cmake  extensions.cmake  modules.cmake  zeronetics-config.cmake
docs/: index.md
docs/arch/: arch.md
docs/dev/: arch-render-manager.md  build-info.md  callbacks.md  create-modules.md  dev.md  engine-core-structure.md  tests.md
docs/diving-deeper/: arch.md  diving-deeper.md
docs/engine-arch/: arch-render-manager.md  engine-arch.md
docs/getting-started/: build-clion.md  getting-started.md  install-engine.md  setting-up-a-game.md
docs/manual/: manual.md
docs/modules/: modules.md  (+1 more)
editor/: CMakeLists.txt
editor/src/: editor-ui.cpp  editor-ui.h  editor.cpp  editor.h  main.cpp
editor/src/ui-elements/: box.cpp  box.h  button.cpp  button.h  label.cpp  label.h  separator.cpp  separator.h  text-field.cpp  text-field.h  ui-element.cpp  ui-element.h
editor/src/utilities/: about.cpp  about.h  bottom-panel.cpp  bottom-panel.h  console.cpp  console.h  editor-config.cpp  editor-config.h  editor-layout.cpp  editor-layout.h  editor-ui.h  editor-utility.cpp  editor-utility.h  font-manager.cpp  font-manager.h  inspector.cpp  inspector.h  load-project.cpp  load-project.h  main-menu.cpp  main-menu.h  new-project.cpp  new-project.h  project-screen.cpp  project-screen.h  project-settings.cpp  project-settings.h  project.cpp  project.h  scene-entity.cpp  scene-entity.h  scene.h  side-panel.cpp  side-panel.h
editor/src/utilities/modals/: about.cpp  about.h  extension-list.cpp  extension-list.h  load-project.h  new-project.cpp  new-project.h  project-screen.h  project-settings.h
editor/src/utilities/project/: project.cpp  project.h  scene-entity.h  scene.cpp  scene.h
editor/stub/project/: CMakeLists.txt.stub  README.md.stub
editor/stub/project/src/: main.cpp.stub
engine/: CMakeLists.txt
engine/src/core/: aabb.cpp  basic.cpp  controls.cpp  engine-info.cpp  game.cpp  globals.cpp  io.cpp  observer.cpp  result.cpp  shader-blueprint.cpp  sysinfo.cpp  timer.cpp  version.cpp  vertices.cpp
engine/src/entities/: entity.cpp
engine/src/entities/3d/: camera-3d.cpp  directional-light-3d.cpp  mesh-3d.cpp  point-light-3d.cpp
engine/src/game/: game.cpp
engine/src/helpers/: strings.cpp  vertices.cpp
engine/src/logging/: log.cpp
engine/src/process/: process.cpp
engine/src/render/: render-manager.cpp
engine/src/scene/: scene.cpp
engine/src/shapes/3d/: cube.cpp  shape-3d.cpp
engine/src/traits/: has-unique-id.cpp  loads-image.cpp  processor.cpp
modules/control-systems/: CMakeLists.txt
modules/control-systems/docs/: control-system-overview.md  control-systems.md  mapping.md
modules/control-systems/include/control-systems/: control-assist.h  free-camera.h
modules/control-systems/src/: control-assist.cpp  free-camera.cpp
modules/control-systems/tests/: CMakeLists.txt
modules/control-systems/tests/src/: main.cpp
modules/control-systems/tests/src/cases/: control-systems-test.cpp  control-systems-test.h
modules/glfw-window/: CMakeLists.txt
modules/glfw-window/include/glfw-window/: glfw-window.h
modules/glfw-window/src/: glfw-window.cpp
modules/glsl-shader-builder/tests/: CMakeLists.txt
modules/glsl-shader-builder/tests/payloads/glsl-shader-builder/: attributes-frag.glsl  attributes-vertex.glsl  simple-frag.glsl  simple-ortho-vertex.glsl  simple-perspective-vertex.glsl
modules/glsl-shader-builder/tests/src/: main.cpp
modules/glsl-shader-builder/tests/src/cases/: glsl-shader-builder-test.cpp  glsl-shader-builder-test.h
modules/hxl-serializer/: CMakeLists.txt
modules/hxl-serializer/include/hxl-serializer/: hxl-serializer.h
modules/hxl-serializer/src/: hxl-serializer.cpp
modules/opengl-renderer/: CMakeLists.txt
modules/opengl-renderer/docs/: opengl-bindable.md
modules/opengl-renderer/include/opengl-renderer/: opengl-renderer.hpp  opengl.h  opengl.hpp
modules/opengl-renderer/include/opengl-renderer/abstracts/: bindable.h  bindable.hpp
modules/opengl-renderer/src/: bindable.cpp  opengl-renderer.cpp  opengl-shader.cpp
modules/opengl-renderer/src/objects/: opengl-object.cpp  opengl-object.h  vao.cpp  vao.h  vbo.cpp  vbo.h
modules/scene-loader-hxl/: CMakeLists.txt
modules/scene-loader-hxl/include/scene-loader-hxl/: scene-loader-hxl.h
modules/scene-loader-hxl/src/: scene-loader-hxl.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+105 more)
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/cases/: io-test.cpp  io-test.h  result-test.cpp  result-test.h  timer-test.cpp  timer-test.h
(+121 files in other folders)
